<resources>
    <string name="app_name">CV of Khosbayar Buyandalai</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="label_home">Home</string>
    <string name="label_aboutme">About me</string>
    <string name="label_workexp">Experience</string>
    <string name="label_contact">Contact</string>
    <string name="cv_fullname">Khosbayar Buyandalai</string>
    <string name="cv_title">Certified Ethical Hacker v9.0</string>
    <string name="click_here_to_view_my_linkedin_profile">www.google.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_quote">Born to hunt, born to show up!</string>
    <string name="personal_info">Personal info</string>
    <string name="default_text">Default text</string>
    <string name="educational_background">Educational background</string>
    <string name="strengths_and_weaknesses">Strengths and Weaknesses</string>
    <string name="work_experience">Work experience</string>
    <string name="working_backgrounds">Working backgrounds</string>
    <string name="academic_project">Academic project</string>
    <string name="text_address">Address</string>
    <string name="my_address">2000 N Court Street, Unit #16C, Fairfield, Iowa 52556</string>
    <string name="phone_number">Phone number</string>
    <string name="my_phone_number">312-300-1404</string>
    <string name="email_addr">Email address</string>
    <string name="my_email_address">hs.khosbayar@gmail.com</string>
</resources>
