<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/work_experience"
            android:src="@drawable/workexp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/work_experience"
            android:textColor="#000"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/bWorkingBackgrounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/working_backgrounds"
        android:textColor="#fff" />

    <Button
        android:id="@+id/bAcademicProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/academic_project"
        android:textColor="#fff" />
</LinearLayout>