<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/posterimg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/cv_fullname"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/cv_title"
        android:textColor="#000"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="italic"
        android:text="@string/text_quote"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLinkedin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/linkedin" />

        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/ivGithub"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/github" />

        <ImageView
            android:id="@+id/ivMedium"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/medium" />

    </LinearLayout>



</LinearLayout>